# keeper-basecamp

./: .gitignore  CMakeLists.txt  PROJECT_KNOWLEDGE.md  README.md  flake.nix  halt.md  metadata.json
docs/: inscription-method.md  keeper-protocol-lez.md  keeper-whitepaper.md  retro-log.md  roadmap.md  senty-review-round1.md
docs/plans/: logos-messaging.md
keeper-ui/: CMakeLists.txt  flake.nix  metadata.json
keeper-ui/qml/: Main.qml
keeper-ui/src/: keeper_ui.rep  keeper_ui_backend.cpp  keeper_ui_backend.h
scratch/: vaclav-answers.md
scripts/: debug-all.mjs  package.json
scripts/lib/: crypto.mjs  message.mjs  waku.mjs
src/: keeper_http_bridge.cpp  keeper_http_bridge.h  keeper_impl.cpp  keeper_impl.h  keeper_interface.h  keeper_plugin.cpp  keeper_plugin.h
tests/: run-headless-tests.sh  run-integration-tests.sh
